--- a/event/app/views/fragments/storyThumbnailTrail.scala.html
+++ b/event/app/views/fragments/storyThumbnailTrail.scala.html
@@ -2,7 +2,7 @@
 <li class="trail" data-link-name="trail">
     <div class="media">
         @story.hero.map{ thumbnailUrl =>
-        <a href="/stories/@story.id" class="media-img" data-link-name="@info.rowNum | image">
+        <a href="/stories/@story.id" class="media__img" data-link-name="@info.rowNum | image">
             <img class="maxed" src="@thumbnailUrl"
                  data-thumb-width="140"
                  alt="@StripHtmlTags(story.title)"
@@ -12,7 +12,7 @@
         </a>
         }
 
-        <h2 class="media-body trail__headline type-5">
+        <h2 class="media__body trail__headline type-5">
             <a href="/stories/@story.id" data-link-name="@info.rowNum | text">
                 @RemoveOuterParaHtml(story.title)
             </a>
