--- a/front/app/views/fragments/frontBlock.scala.html
+++ b/front/app/views/fragments/frontBlock.scala.html
@@ -1,6 +1,9 @@
 @(block: Trailblock)(implicit request: RequestHeader)
 
-<section class="front-section zone-@block.description.section" data-link-name="block | @block.description.name">
+<section 
+    class="front-section zone-@block.description.section" 
+    data-link-name="block | @block.description.name"
+    data-link-context="@block.description.section">
 
     @if(block.description.id != "") {
 	    @if("/" + block.description.id == request.path) {
