--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -3,11 +3,9 @@
      ========================================================================== */
 
 #preloads {
-    position: relative;
+    @include gs-container;
     clear: both;
-    max-width: 64em;
-    max-width: 102.4rem;
-    margin: 58px auto 0 auto;
+    margin: 58px auto 0;
 
     @media only screen and (min-width: $tablet) {
         margin-top: 104px;
