--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -4,6 +4,7 @@
 @import "_vars";
 @import "_mixins";
 @import "_extends-only";
+@import "layout/_grid-system";
 
 //External components
 @import "responsive-grid";
