--- a/common/app/views/fragments/footer.scala.html
+++ b/common/app/views/fragments/footer.scala.html
@@ -1,6 +1,6 @@
 @(page: MetaData)(implicit request: RequestHeader)
 
-<footer class="footer" data-link-name="footer" role="contentinfo">
+<footer class="footer gs-container" data-link-name="footer" role="contentinfo">
 
     <div id="footer-nav">
         <a class="top" data-link-name="back to top" href="#top">Back to top<i class="i i-arrow-small-up"></i></a>
