--- a/style-guide/app/views/styleGuide/fragments/sprites.scala.html
+++ b/style-guide/app/views/styleGuide/fragments/sprites.scala.html
@@ -5,6 +5,7 @@
 <tr><td class="type-9">.i-arrow-white-down</td><td class="sprite-cell"><i class="i i-arrow-white-down"></i></td></tr>
 <tr><td class="type-9">.i-close-x</td><td class="sprite-cell"><i class="i i-close-x"></i></td></tr>
 <tr><td class="type-9">.i-comment-count-bubble</td><td class="sprite-cell"><i class="i i-comment-count-bubble"></i></td></tr>
+<tr><td class="type-9">.i-comment-count-small</td><td class="sprite-cell"><i class="i i-comment-count-small"></i></td></tr>
 <tr><td class="type-9">.i-date</td><td class="sprite-cell"><i class="i i-date"></i></td></tr>
 <tr><td class="type-9">.i-default-witness-avatar</td><td class="sprite-cell"><i class="i i-default-witness-avatar"></i></td></tr>
 <tr><td class="type-9">.i-ee-add-button</td><td class="sprite-cell"><i class="i i-ee-add-button"></i></td></tr>
