--- a/common/app/assets/stylesheets/module/external/_from-content-api.scss
+++ b/common/app/assets/stylesheets/module/external/_from-content-api.scss
@@ -18,7 +18,7 @@
     h3 {
         @extend %type-5;
         margin: 0;
-        font-family: georgia;
+        font-family: georgia, serif;
     }
 
     > p,
